# luke

./: .flake8  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  batch_generator.py  cli.py  create_hyper_links_dataset.py  entity_disambiguation.py  glue.py  model.py  model_bert.py  model_common.py  model_e2e.py  model_nopageent.py  model_nopageent_static.py  model_static.py  multi_choice_qa.py  optimization.py  pretraining.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  split_entity_vocab.py  train.py  wiki_corpus.py
.circleci/: config.yml
dynamic_embeddings/: entity_embedding_predictor.py  hyperlink_dataset.py  hyperlink_dataset_reader.py  util.py
dynamic_embeddings/configs/: base.libsonnet
entity_disambiguation/: create_candidate_list.py  dataset.py  ed_dataset.py  ed_model.py  main.py  model.py
examples/: README.md  cli.py  launch.py  model.py  model_loader.py  raiden_cli.py  text_encoder.py  trainer.py  utils.py  word_entity_model.py
examples/entity_disambiguation/: README.md  dataloader.py  dataset.py  evaluate.py  main.py  model.py  train.py  utils.py
examples/entity_linking/: main.py  model.py  utils.py
examples/entity_span_qa/: main.py  model.py  record_eval.py  utils.py
examples/entity_typing/: README.md  evaluate_transformers_checkpoint.py  main.py  model.py  reader.py  utils.py
examples/legacy/: README.md  cli.py
examples/mlama/: README.md  evaluate.py  reader.py
examples/ner/: README.md  convert_allennlp_to_huggingface_model.py  evaluate_transformers_checkpoint.py  main.py  model.py  reader.py  utils.py
examples/reading_comprehension/: README.md  evaluate_qa.py  main.py  model.py  utils.py
examples/relation_classification/: README.md  convert_allennlp_to_huggingface_model.py  evaluate_transformers_checkpoint.py  luke_for_entity_pair_classification.py  main.py  model.py  reader.py  utils.py
examples/squad/: main.py  model.py  utils.py  utils_squad.py  utils_squad_evaluate.py
examples/utils/: __init__.py  experiment_logger.py  mention_db.py  text_encoder.py  trainer.py  util.py
examples_allennlp/entity_typing/: README.md  evaluate_transformers_checkpoint.py  model.py  reader.py
examples_allennlp/ner/: README.md  evaluate_transformers_checkpoint.py  model.py  reader.py
examples_allennlp/relation_classification/: README.md  evaluate_transformers_checkpoint.py  reader.py
examples_allennlp/utils/: span_utils.py
luke/: __init__.py  batch_generator.py  cli.py  model.py  model_common.py  model_e2e.py  optimization.py  train.py  wiki_corpus.py
luke/pretraining/: batch_generator.py  dataset.py  metrics.py  model.py  tokenization.py  train.py  validation_evaluator.py
luke/utils/: __init__.py  convert_luke_to_huggingface_model.py  entity_linker.py  entity_vocab.py  interwiki_db.py  model_utils.py  registers.py  sentence_splitter.py  sentence_tokenizer.py  tokenization_xlm_roberta_debugged.py  util.py  vocab.py  wiki_corpus.py  word_tokenizer.py
multilingual/: multilingual_entity_vocab.py
notebooks/: huggingface_conll_2003.ipynb  huggingface_open_entity.ipynb  huggingface_tacred.ipynb
pretraining_config/: luke_large_stage1.json  luke_large_stage2.json  mluke_base_stage1.json  mluke_base_stage2.json  mluke_large_stage2.json
scripts/: create_aida_candidate_list.py  create_ed_candidate_list.py
scripts/entity_disambiguation/: commands.py  dataset.py  ed_dataset.py  (+4 more)
tests/: __init__.py  test_luke.py  test_model.py  test_optimization.py  test_tokenization.py
utils/: __init__.py  aida_conll.py  entity_disambiguation_dataset.py  entity_linker.py  sentence_tokenizer.py  vocab.py  word_tokenizer.py
(+153 files in other folders)
