[tool.poetry]
authors = ["Ikuya Yamada <ikuya@ousia.jp>"]
description = ""
name = "luke"
version = "0.1.0"

[tool.poetry.dependencies]
Click = "*"
comet-ml = {version = "*", optional = true}
joblib = "*"
marisa-trie = "*"
numpy = "*"
pyicu = {version = "*", optional = true}
pyjnius = {version = "*", optional = true}
python = "^3.6.1"
sentencepiece = "*"
seqeval = "*"
tensorflow = "*"
torch = "*"
tqdm = "*"
transformers = "*"
ujson = "*"
wikipedia2vec = "*"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8.3"
mypy = "^0.780"
pre-commit = "^2.5.1"
pytest = "^5.2"

[tool.poetry.extras]
comet = ["comet-ml"]
icu = ["pyicu"]
opennlp = ["pyjnius"]

[tool.poetry.scripts]
luke = 'luke.cli:cli'

[tool.black]
line-length = 120

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
