[tool.poetry]
authors = ["Ikuya Yamada <ikuya@ousia.jp>", "Ryokan Ri <ryo0123@ousia.jp>"]
description = ""
name = "luke"
version = "0.2.0"

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
tensorflow = "^2.8.0"
torch = "^1.8.0,<1.11.0"
click = "^8.0.4"
joblib = "^1.1.0"
marisa-trie = "^0.7.7"
sentencepiece = "^0.1.96"
tqdm = "^4.63.0"
ujson = "^5.1.0"
wikipedia2vec = "^1.0.5"
transformers = "4.13.0"
allennlp = {version = "2.9.1", optional = true}
allennlp-models = {version = "2.9.0", optional = true}
seqeval = {version = "1.2.2", optional = true}
PyICU = {version = "^2.8.1", optional = true}
comet-ml = {version = "^3.28.2", optional = true}
pyjnius = {version = "^1.4.1", optional = true}
deepspeed = {version = "^0.6.0", optional = true}

[tool.poetry.extras]
comet = ["comet-ml"]
icu = ["pyicu"]
opennlp = ["pyjnius"]
examples = ["seqeval", "allennlp", "allennlp-models"]
pretraining = ["deepspeed"]

[tool.poetry.scripts]
luke = 'luke.cli:cli'

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
pytest = "^7.1.1"
isort = "^5.10.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
