[metadata]
name = luke
version = 0.2.0
authors = Ikuya Yamada <ikuya@ousia.jp>", "Ryokan Ri <ryo0123@ousia.jp>

[options]
packages = find:
install_requires =
    click
    joblib
    marisa-trie
    numpy
    sentencepiece
    tensorflow
    torch
    tqdm
    transformers
    ujson
    wikipedia2vec

[options.extras_require]
comet =
    comet-ml
dev =
    black
    isort
    pre-commit
    pytest
examples =
    allennlp
    allennlp-models
    seqeval
icu =
    pyicu
opennlp =
    pyjnius
pretraining =
    deepspeed

[options.entry_points]
console_scripts =
    luke = luke.cli:cli
